2005-02-22 Derek Price <derek@ximbiot.com>

	* error.c (error): Handle unsigned int format char.
	* parseinfo.c (parse_error): New function.
	(parse_config): Keep track of line number and output it in error
	messages.
	* rcs.c (RCS_setlocalid): Accept file path and line number for error
	messages.  Add header comment block.
	* rcs.h (RCS_setlocalid): Update prototype to match.
	* parseinfo.h (parse_error): Declare new function.
	* sanity.sh: Accept new --noredirect argument.
	(checklongoptarg): Accept longoptmode as an argument
	rather than via an environment variable.
	(notnoredirect): New function.
	(newroot): Handle root options.
	(keywordexpand, config): Skip in noredirect mode.  Update for new
	config error messages.
	(multiroot): Some reformatting.
	(writeproxy, writeproxy-noredirect): Skip in noredirect mode.
	(commit, writeproxy-noredirect): Quote CVSROOT arguments since they
	might contain semicolons.

2005-02-21  Mark D. Baushke  <mdb@cvshome.org>

	* import.c (import): Avoid using assert with side effects it may
	be configured away using NDEBUG.
	(Patch from Frank Hemer <frank@hemer.org>.)

2005-02-20  Mark D. Baushke  <mdb@cvshome.org>

	* main.c (main): Check the results from xgethostname(). Print a
	message with the errno and use "localhost" if NULL is returned.

2005-02-20 Derek Price <derek@ximbiot.com>

	* cvs.h (run_arg): Rename to...
	(run_add_arg): New function.
	* run.c (run_arg): Remove.
	(run_add_arg): Remove static declaration.
	(run_piped): New function.
	* logmsg.c, modules.c: s/run_arg/run_add_arg/.
	* release.c (release): Replace use of piped_child with a call
	to run_piped to avoid quoting issues.
	* sanity.sh (info-cleanup-0): Expect success.

2005-02-19 Derek Price <derek@ximbiot.com>

	* edit.c (unedit_fileproc, mark_up_to_date): Replace xmallc/strcat
	sequence with single call to Xasprintf.

2005-02-08 Derek Price <derek@ximbiot.com>

	* rsh-client.c: Some reformatting.

2005-02-04 Derek Price <derek@ximbiot.com>
